# delta-v

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/frames/: Cargo.toml
crates/frames/src/: lib.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/mechanics/: Cargo.toml
crates/mechanics/src/: lib.rs
crates/numerics/: Cargo.toml
crates/numerics/src/: lib.rs
crates/orbit/: Cargo.toml
crates/orbit/src/: lib.rs
crates/units/: Cargo.toml
crates/units/src/: lib.rs
diagnostics/: C1_rust.md  M0_arithmetic.md  M1_algebra.md  README.md
docs/: FIELD_MANUAL.md  INDEX.md  concept_map.md  curriculum.md  daily_practice.md  formula_reference.md  knowledge_tracker.md  method.md  scripts.md  session_template.md  setup.md
docs/predict_practice/: README.md  example_01_cliff_drop.md  example_02_braking_car.md  example_03_satellite_orbit.md  practice_exercises.md
drills/: README.md
drills/01-fundamentals/: Cargo.toml
drills/01-fundamentals/src/: main.rs
drills/02-functions/: Cargo.toml
drills/02-functions/src/: main.rs
drills/03-enums-errors/: Cargo.toml
drills/03-enums-errors/src/: main.rs
drills/04-newtypes/: Cargo.toml
drills/04-newtypes/src/: main.rs
drills/05-structs-methods/: Cargo.toml
drills/05-structs-methods/src/: main.rs
first_30/: CATALOG.md  README.md
first_30/practice_01/: BRIEF.md
first_30/practice_01/src/: lib.rs  main.rs
first_30/practice_02/: BRIEF.md
first_30/practice_02/src/: main.rs
first_30/practice_03/: BRIEF.md  Cargo.toml
first_30/practice_03/src/: main.rs
first_30/practice_04/: BRIEF.md  Cargo.toml
first_30/practice_04/src/: main.rs
first_30/practice_05/: BRIEF.md  Cargo.toml
first_30/practice_05/src/: main.rs
first_30/practice_06/: BRIEF.md  Cargo.toml
first_30/practice_06/src/: main.rs
first_30/practice_07/: BRIEF.md  Cargo.toml
first_30/practice_07/src/: main.rs
first_30/practice_08/: BRIEF.md  Cargo.toml
first_30/practice_08/src/: main.rs
first_30/practice_09/: BRIEF.md  Cargo.toml
first_30/practice_09/src/: main.rs
first_30/practice_1/examples/: extra_kinematics.rs  extra_vectors.rs
first_30/practice_1/src/: kinematics.rs  main.rs  vectors.rs
first_30/practice_10/: BRIEF.md
first_30/practice_10/src/: main.rs
first_30/practice_11/: BRIEF.md
first_30/practice_11/src/: main.rs
first_30/practice_12/: BRIEF.md
first_30/practice_12/src/: main.rs
first_30/practice_13/: BRIEF.md  Cargo.toml
first_30/practice_13/src/: main.rs
first_30/practice_14/: BRIEF.md  Cargo.toml
first_30/practice_14/src/: main.rs
first_30/practice_15/: BRIEF.md  Cargo.toml
first_30/practice_15/src/: main.rs
first_30/practice_16/: BRIEF.md  Cargo.toml
first_30/practice_16/src/: main.rs
first_30/practice_17/: BRIEF.md  Cargo.toml
first_30/practice_17/src/: main.rs
first_30/practice_18/: BRIEF.md  Cargo.toml
first_30/practice_18/src/: main.rs
first_30/practice_19/: BRIEF.md  Cargo.toml
first_30/practice_19/src/: main.rs
first_30/practice_2/src/: main.rs
first_30/practice_20/: BRIEF.md  Cargo.toml
first_30/practice_20/src/: main.rs
first_30/practice_21/: BRIEF.md  Cargo.toml
first_30/practice_21/src/: main.rs
first_30/practice_22/: BRIEF.md  Cargo.toml
first_30/practice_22/src/: main.rs
first_30/practice_23/: BRIEF.md  Cargo.toml
first_30/practice_23/src/: main.rs
first_30/practice_24/: BRIEF.md  Cargo.toml
first_30/practice_24/src/: main.rs
first_30/practice_25/: BRIEF.md  Cargo.toml
first_30/practice_25/src/: main.rs
first_30/practice_26/: BRIEF.md  Cargo.toml
first_30/practice_26/src/: main.rs
first_30/practice_27/: BRIEF.md  Cargo.toml
first_30/practice_27/src/: main.rs
first_30/practice_28/: BRIEF.md  Cargo.toml
first_30/practice_28/src/: main.rs
first_30/practice_29/: BRIEF.md  Cargo.toml
first_30/practice_29/src/: main.rs
first_30/practice_30/: BRIEF.md  Cargo.toml
python/: pyproject.toml
python/frontier_validation/: __init__.py
python/frontier_validation/test/: __init__.py
scripts/: new_session.py
(+1 files in other folders)
