[package]
name = "dv-frames"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tagged coordinate frames and frame transformations"

[dependencies]
dv-units = { path = "../units" }
dv-math = { path = "../math" }

[lints]
workspace = true
