[package]
name = "dv-mechanics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Classical mechanics: motion, forces, energy, impulse"

[dependencies]
dv-units = { path = "../units" }
dv-math = { path = "../math" }

[lints]
workspace = true
